# Workspace + root package hybrid (Phase 2.6-A.1).
# rust-wallet/Cargo.toml is BOTH a workspace root AND the hodos-wallet package.
# The hodos_permission_engine crate (added in Phase 2.6) is a workspace member.
# Cargo natively supports this pattern.
#
# `resolver = "2"` preserves the dependency resolution semantics that hodos-wallet
# had as a standalone edition-2021 package (which implies resolver 2 by default).
# Without this explicit declaration, workspace roots default to resolver 1, which
# would silently change feature unification for the wallet binary.
[workspace]
members = [
    ".",
    "crates/hodos_permission_engine",
]
resolver = "2"

[package]
name = "hodos-wallet"
version = "0.3.0"
edition = "2021"
default-run = "hodos-wallet"

[dependencies]
# HTTP server
actix-web = "4.9"
actix-cors = "0.7"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Directory helpers
dirs = "5.0"

# Random number generation
rand = "0.8"
base64 = "0.22"

# Logging
log = "0.4"
env_logger = "0.11"

# Crypto libraries (self-contained, no external wallet-core dependency)
secp256k1 = { version = "0.28", features = ["rand-std"] }
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
hmac = "0.12"
pbkdf2 = "0.12"
hex = "0.4"
thiserror = "1.0"
aes-gcm = "0.10"
aes = "0.8"
# AES-CBC for BIE1 (ECIES Electrum) legacy Yours-era encrypt/decrypt — Phase 2 Step 3c.
# `alloc` feature gives us encrypt_padded_vec_mut / decrypt_padded_vec_mut; `block-padding`
# (default) re-exports cipher::block_padding::Pkcs7, so no separate block-padding dep.
cbc = { version = "0.1", features = ["alloc"] }
subtle = "2"
uuid = { version = "1", features = ["v4"] }
once_cell = "1.19"

# HD Wallet (BIP39/BIP32)
bip39 = "2.2"
bip32 = "0.5"

# HTTP client for blockchain API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Compression (gzip for on-chain backup)
flate2 = "1"

# Regex for JSON fixing
regex = "1"

# Database (SQLite)
rusqlite = { version = "0.30", features = ["bundled"] }

# Async utilities (CancellationToken for graceful shutdown)
tokio-util = "0.7"

# Async trait support for IndexerProvider (Phase 1.6d.B Services facade)
async-trait = "0.1"


# Windows DPAPI for mnemonic auto-unlock (tied to Windows user account)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

# macOS Keychain for mnemonic auto-unlock (tied to macOS user account)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"
