[package]
name = "hodos_permission_engine"
version = "0.1.0"
edition = "2021"
description = "Pure decision logic for the Hodos wallet permission engine. No actix, no sqlite, no http — testable in isolation."

# Intentionally minimal. NO actix, NO sqlite, NO reqwest, NO AppState.
# The workspace boundary enforces this at compile time per Phase 2.6 LD1.
[dependencies]
# Serialization for the PermissionContext / PermissionDecision wire types.
# These get consumed by permission_service to build the 202 PENDING JSON
# envelope per LD2; engine itself doesn't deal with HTTP.
serde = { version = "1.0", features = ["derive"] }

# Tests only — round-trip checks for the serde impls.
[dev-dependencies]
serde_json = "1.0"
